Add JMX + fix some typos [skip ci]