@@ -3,7 +3,7 @@ This page documents the keys for the JVM server options across the various suppo
 ### Cassandra 3.11
 To configure the server JVM with Cassandra 3.11 you need to use the `jvm-options` key which corresponds to the `CASSANDRA_CONF/jvm.options` file.
 
-Here is a brief example showing it is used in a YAML manifest:
+Here is a brief example showing how it is used in a YAML manifest:
 
 ```yaml
 apiVersion: cassandra.datastax.com/v1beta1
@@ -34,7 +34,7 @@ spec:
 ```
 The following table lists the supported keys that can appear under `jvm-options` along with their corresponding property names in `jvm.options`.
 
-| Config Builder key | jvm.options property | Value type | Notes | 
+| Config Builder key | jvm.options property | Value type | Notes |
 | ------------------ | :-------------------:| :--------: | :---: |
 | `additional-jvm-opts` | `JVM_OPTS` | Arbitrary JVM options passed to Cassandra on start up |
 | `cassandra_ring_delay_ms` | `-Dcassandra.ring_delay_ms`| integer | Disabled by default |
@@ -47,7 +47,10 @@ The following table lists the supported keys that can appear under `jvm-options`
 | `cassandra_initial_token` | `-Dcassandra.initial_token` | string | Disabled by default |
 | `resize_tlb` | `-XX:+ResizeTLAB` | boolean | Enabled by default |
 | `cassandra_join_ring` | `-Dcassandra.join_ring` | boolean | Enabled by default |
-| `jmx-remote-ssl-opts` | | string | Remote SSL options |
+| `jmx-connection-type` | | string | Possible values include `local-no-auth`, `remote-no-auth`, and `remote-dse-unified-auth`. Defaults to `local-no-auth` |
+| `jmx-port` | `-Dcassandra.jmx.local.port` or `-Dcom.sun.management.jmxremote.port`| integer | JMX port. Defaults to 7199 |
+| `jmx-remote-ssl` | various | boolean | Enable remote JMX. Defaults to false. See below for details. |
+| `jmx-remote-ssl-opts` | | string array | Remote SSL options. See below for details. |
 | `use_tlb` | `-XX:+UseTLAB` | boolean | Enabled by default |
 | `perf_disable_shared_mem` | `-XX:+PerfDisableSharedMem` | boolean | Enabled by default |
 | `cassandra_config_directory` | `-Dcassandra.config` | string | Disabled by default. Overriding this property may break the cluster. |
@@ -62,7 +65,7 @@ The following table lists the supported keys that can appear under `jvm-options`
 | `heap_size_young_generation` | `-Xmn` | string | Disabled by default |
 | `max_gc_pause_millis` | `-XX:MaxGCPauseMillis` | integer | Defaults to `500`. Can only be used when G1 garbage collector is used. |
 | `always_pre_touch` | `-XX:+AlwaysPreTouch` | boolean | Enabled by default |
-| `unlock_commerical_features` | `-XX:+UnlockCommercialFeatures` | boolean | Disabled by default |
+| `unlock_commercial_features` | `-XX:+UnlockCommercialFeatures` | boolean | Disabled by default |
 | `cassandra_disable_auth_caches_remote_configuration` | `-Dcassandra.disable_auth_caches_remote_configuration` | boolean | Disabled by default |
 | `survivor_ratio` | `-XX:SurvivorRatio` | integer | Defaults to `8`. Can only be used when CMS garbage collector is used. |
 | `g1r_set_updating_pause_time_percent` | `-XX:G1RSetUpdatingPauseTimePercent` | integer | Defaults to `5`. Can only be used when G1 garbage collector is used. |
@@ -77,7 +80,6 @@ The following table lists the supported keys that can appear under `jvm-options`
 | `print_gc_application_stopped_time` | `-XX:+PrintGCApplicationStoppedTime` | boolean | Disabled by default |
 | `print_promotion_failure` | `-XX:+PrintPromotionFailure` | boolean | Disabled by default |
 | `parallel_gc_threads` | `-XX:ParallelGCThreads` | integer | Disabled by default. Can only be used when G1 garbage collector is used. |
-| `jmx-connection-type` | | string | Possible values include `local-no-auth`, `remote-no-auth`, and `remote-dse-unified-auth`. Defaults to `local-no-auth` |
 | `cassandra_force_default_indexing_page_size` | `-Dcassandra.force_default_indexing_page_size` | boolean | Disabled by default |
 | `flight_recorder` | `-XX:+FlightRecorder` | boolean | Disabled by default |
 | `cassandra_force_3_0_protocol_version` | `-Dcassandra.force_3_0_protocol_version=true` | boolean | Disabled by default |
@@ -89,8 +91,31 @@ The following table lists the supported keys that can appear under `jvm-options`
 | `max_tenuring_threshold` | `-XX:MaxTenuringThreshold` | integer | Defaults to `1`. Can only be used when the CMS garbage collector is used. |
 | `number_of_gc_log_files` | `-XX:NumberOfGCLogFiles` | integer | Disabled by default. Can only be used when the G1 garbage collector is used. |
 | `print_gc_details` | `-XX:+PrintGCDetails` | boolean | Disabled by default |
+| `print_gc_date_stamps` | `-XX:+PrintGCDateStamps` | boolean | Print GC Date Stamps. Disabled by default |
 | `enable_assertions` | `-ea` | boolean | Enabled by default |
 | `use_thread_priorities` | `-XX:+UseThreadPriorities` | boolean | Enabled by default |
+
+When `jmx-remote-ssl` is true, the following options are automatically included, followed by any other options specified in `jmx-remote-ssl-opts`:
+
+```
+-Dcom.sun.management.jmxremote.ssl=true
+-Dcom.sun.management.jmxremote.ssl.need.client.auth=true
+-Dcom.sun.management.jmxremote.registry.ssl=true
+```
+
+When `jmx-remote-ssl` is false, the following option is automatically included:
+
+```
+-Dcom.sun.management.jmxremote.ssl=false
+```
+
+Depending on `jmx-connection-type`, the following options are included:
+
+| JMX connection type | JVM options |
+|-------------------- |:------------|
+| `local-no-auth` | `-Dcom.sun.management.jmxremote.authenticate=false`<br/>`-Dcassandra.jmx.local.port={{jmx-port}}` |
+| `remote-no-auth` | `-Dcom.sun.management.jmxremote.authenticate=false`<br/>`-Dcom.sun.management.jmxremote.port={{jmx-port}}` |
+| `remote-dse-unified-auth` | `-Dcassandra.jmx.remote.login.config=CassandraLogin`<br/>`-Dcom.sun.management.jmxremote.ssl.need.client.auth=true`<br/>`-Dcassandra.jmx.authorizer=org.apache.cassandra.auth.jmx.AuthorizationProxy`<br/>`-Djava.security.auth.login.config=/etc/dse/cassandra/cassandra-jaas.config`<br/>`-Dcassandra.jmx.remote.port={{jmx-port}}` |
 
 ### Cassandra 4.0
 To configure the server JVM with Cassandra 4.0 you need to use the following keys:
@@ -99,7 +124,7 @@ To configure the server JVM with Cassandra 4.0 you need to use the following key
 * `jvm11-server-options` which corresponds to the `CASSANDRA_CONF/jvm11-server.options` file and contains settings for Java 11+;
 * `jvm8-server-options` which corresponds to the `CASSANDRA_CONF/jvm8-server.options` file and contains settings for Java 8.
 
-Here is a brief example showing it is used in a YAML manifest:
+Here is a brief example showing how it is used in a YAML manifest:
 
 ```yaml
 apiVersion: cassandra.datastax.com/v1beta1
@@ -137,6 +162,10 @@ The following table lists the supported keys that can appear under `jvm-server-o
 | ------------------ | :-------------------:| :--------: | :---: |
 | `additional-jvm-opts` | `JVM_OPTS` | Arbitrary JVM options passed to Cassandra on start up |
 | `jmx-connection-type` | | string | Possible values include `local-no-auth`, `remote-no-auth`. Defaults to `local-no-auth` |
+| `jmx-port` | `-Dcassandra.jmx.local.port` or `-Dcom.sun.management.jmxremote.port`| integer | JMX port. Defaults to 7199 |
+| `jmx-remote-ssl` | various | boolean | Enable remote JMX. Defaults to false. See below for details. |
+| `jmx-remote-ssl-opts` | various | string array | Remote SSL options. See below for details. |
+| `jmx-remote-ssl-require-client-auth` | `-Dcom.sun.management.jmxremote.ssl.need.client.auth=true` | boolean | Require Client Authentication? Valid only if `jmx-remote-ssl` is true. See below for details. |
 | `unlock-diagnostic-vm-options` | `-XX:+UnlockDiagnosticVMOption` | boolean | Enabled by default |
 | `cassandra_available_processors` | `-Dcassandra.available_processors` | integer | Disabled by default |
 | `cassandra_config_directory` | `-Dcassandra.config` | string | Disabled by default. Overriding this property may break the cluster. |
@@ -174,12 +203,49 @@ The following table lists the supported keys that can appear under `jvm-server-o
 | `log_compilation` | `-XX:+LogCompilation` | boolean | Disabled by default |
 | `initial_heap_size` | `-Xms` | string | Disabled by default |
 | `max_heap_size` | `-Xmx` | string | Disabled by default |
+| `max_direct_memory` | `-XX:MaxDirectMemorySize` | string | Max direct memory size. Valid for DSE only. Disabled by default |
 | `jdk_nio_maxcachedbuffersize` | `-Djdk.nio.maxCachedBufferSize` | integer | Defaults to `1048576` |
 | `cassandra_expiration_date_overflow_policy` | `-Dcassandra.expiration_date_overflow_policy` | string | Possible values include `REJECT`, `CAP`, `CAP_NOWARN` |
 | `io_netty_eventloop_maxpendingtasks` | `-Dio.netty.eventLoop.maxPendingTasks` | integer | Defaults to `65536` |
 | `crash_on_out_of_memory_error` | `-XX:+CrashOnOutOfMemoryError` | boolean | Disabled by default. Requires `exit_on_out_of_memory_error` to be disabled. |
 | `print_heap_histogram_on_out_of_memory_error` | `-Dcassandra.printHeapHistogramOnOutOfMemoryError` | boolean | Disabled by default |
 | `exit_on_out_of_memory_error` | `-XX:+ExitOnOutOfMemoryError` | boolean | Disabled by default |
+
+
+When `jmx-remote-ssl` is true, the following options are automatically included, followed by any other options specified in `jmx-remote-ssl-opts` and `jmx-remote-ssl-require-client-auth`:
+
+```
+-Dcom.sun.management.jmxremote.ssl=true
+-Dcom.sun.management.jmxremote.registry.ssl=true
+```
+
+The default contents of `jmx-remote-ssl-opts` are:
+
+```
+-Djavax.net.ssl.keyStore=/path/to/keystore
+-Djavax.net.ssl.keyStoreType=<keystore-type>
+-Djavax.net.ssl.keyStorePassword=<keystore-password>
+-Djavax.net.ssl.trustStore=/path/to/truststore
+-Djavax.net.ssl.trustStoreType=<truststore-type>
+-Djavax.net.ssl.trustStorePassword=<truststore-password>
+-Dcom.sun.management.jmxremote.ssl.enabled.protocols=<enabled-protocols>
+-Dcom.sun.management.jmxremote.ssl.enabled.cipher.suites=<enabled-cipher-suites>
+```
+
+These contents are just examples, so it is required to overwrite the defaults.
+
+When `jmx-remote-ssl` is false, the following option is automatically included:
+
+```
+-Dcom.sun.management.jmxremote.ssl=false
+```
+
+Depending on `jmx-connection-type`, the following options are included:
+
+| JMX connection type | JVM options |
+|-------------------- |:------------|
+| `local-no-auth` | `-Dcom.sun.management.jmxremote.authenticate=false`<br/>`-Dcassandra.jmx.local.port={{jmx-port}}` |
+| `remote-no-auth` | `-Dcom.sun.management.jmxremote.authenticate=false`<br/>`-Dcom.sun.management.jmxremote.port={{jmx-port}}` |
 
 The following table lists the supported keys that can appear under `jvm11-server-options` along with their corresponding property names in `jvm11-server.options`.
 
